day3_lests_encrypt2/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: nginx-deployment
  namespace: matomi

  labels:

    app: nginx

spec:

  replicas: 1

  selector:

    matchLabels:

      app: nginx

  template:

    metadata:
    
      labels:

        app: nginx

    spec:

      containers:

      - name: nginx

        image: nginx:1.14.2

        ports:

        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service-perso
  namespace: matomi
spec:
  selector:
      app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
