day3_lests_encrypt2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-matomi
  namespace: matomi
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomi-nginx
  namespace: matomi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: matomi-issuer
 
spec:
  ingressClassName: nginx-matomi
  rules:
  - host: "matomi.duckdns.org"
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-perso
            port:
              number: 80
  tls:
  - hosts:
    - matomi.duckdns.org
    secretName: matomi-letsencrypt-tls
